# InstaVault

./: .env-example  .env_example  .gitignore  Dockerfile  docker-compose.yml  docker.env_example  pyproject.toml
config/: settings.py  urls.py
landing/: urls.py  views.py
landing/templates/landing/: index.html
users/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
users/management/commands/: create_owner.py  transfer_owner.py
users/migrations/: 0001_initial.py  0002_alter_usersettings_settings.py  0003_alter_customuser_telegram_id.py  0004_alter_customuser_options_customuser_is_owner_and_more.py
users/templates/admin/: confirm_ownership_transfer.html  send_email_message.html  send_telegram_message.html
users/templates/users/: base.html  change_password.html  login.html  profile.html  register.html
users/templates/users/htmx_page/: change_password.html  login.html  register.html
